# Django-prof-practice

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
pages/: urls.py
