[project]
name = "hello-world-dock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
]

[tool.mypy]
# Ignores import errors
ignore_missing_imports = true

# Ignore type annotation
check_untyped_defs = false
disallow_untyped_defs = false

[tool.ruff.format]
# Quotation style
quote-style = "double"